--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </section>
         </main>
 
-        <footer class="text-center py-3">
+        <footer class="footer-class text-center py-3">
             <div class="footer-about">
                 <h3>Thanks For Visit</h3>
                 <p>We are a company that values excellence and customer satisfaction.</p>
