--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
                 <div class="container-fluid d-flex justify-content-between">
                     <a class="navbar-brand" href="#">ManageWithUs</a>
 
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    <button class="navbar-toggler custom-hamburger" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar"
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+
 
                     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                         aria-labelledby="offcanvasNavbarLabel">
