--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                             <input class="form-check-input" type="checkbox" id="darkModeToggle"
                                 aria-label="Toggle Dark Mode">
                             <label class="form-check-label" for="darkModeToggle">
-                                <i class="fas fa-sun"></i>
-                                <i class="fas fa-moon" style="display: none;"></i>
+                                <i class="fas fa-sun sun-icon"></i>
+                                <i class="fas fa-moon moon-icon"></i>
                             </label>
                         </div>
 
