--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
                 </div>
             </div>
         </nav>
+        <div>
+            <img src="manage with us (1).png" alt="home" class="img-fluid">
+        </div>
     </header>
 
     <main>
         <section class="custom-section" id="home">
-            <h1>Welcome to Our Website</h1>
-            <p>This is the home section of the page.</p>
+            <!-- <h1>Welcome to Our Website</h1>
+            <p>This is the home section of the page.</p> -->
             <img src="logo.jpeg" alt="home" class="img-fluid">
         </section>
 
